# hnefatafl_cli

./: .gitignore  Cargo.toml  README.md  first_success.ot  play.py  test.net
replays/: 2024-07-28-11-54-14-Random-1-Random-1-10  2024-07-28-12-20-14-AlphaBeta-200-AlphaBeta-200-10  2024-07-28-12-22-23-AlphaBeta-200-MCTS-200-10  2024-07-28-12-24-17-AlphaBeta-200-MCTS-400-10  2024-07-28-12-27-01-AlphaBeta-200-MCTS-400-10  2024-07-28-12-32-20-AlphaBeta-200-MCTS-200-10  2024-07-28-12-33-37-AlphaBeta-200-MCTS-400-10  2024-07-28-12-41-39-MCTS-400-AlphaBeta-200-10  2024-07-28-12-43-48-AlphaBeta-20-AlphaBeta-20-10  2024-07-28-12-46-22-AlphaBeta-20-AlphaBeta-20-10  2024-07-28-13-06-22-Random-1-Random-1-1000  2024-07-28-13-07-12-Random-1-Random-1-1000
results/: 2024-07-28-11-54-14-Random-1-Random-1-10  2024-07-28-12-20-14-AlphaBeta-200-AlphaBeta-200-10  2024-07-28-12-22-23-AlphaBeta-200-MCTS-200-10  2024-07-28-12-24-17-AlphaBeta-200-MCTS-400-10  2024-07-28-12-27-01-AlphaBeta-200-MCTS-400-10  2024-07-28-12-32-20-AlphaBeta-200-MCTS-200-10  2024-07-28-12-33-37-AlphaBeta-200-MCTS-400-10  2024-07-28-12-41-39-MCTS-400-AlphaBeta-200-10  2024-07-28-12-43-48-AlphaBeta-20-AlphaBeta-20-10  2024-07-28-12-46-22-AlphaBeta-20-AlphaBeta-20-10  2024-07-28-13-06-22-Random-1-Random-1-1000  2024-07-28-13-07-12-Random-1-Random-1-1000  2024-07-28-13-07-52-Random-1-Random-1-1000  2024-07-28-13-08-08-Random-1-Random-1-1000  2024-07-28-13-08-22-Random-1-Random-1-1000  2024-07-28-13-08-36-Random-1-Random-1-1000  2024-07-28-13-08-50-Random-1-Random-1-1000  2024-07-28-13-09-03-Random-1-Random-1-1000  (+2 more)
(+24 files in other folders)
